fix alignment for main elements in the page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+/* reset CSS for box model */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap; /* make sure that wour diplay inline does not generate a white space */
+}
+
+body {
+  width: 1000px;
+  margin: 0px auto; /* centralizes the element horizontally*/
+}
+
+.sidebar {
+  float: left;
+  width: 200px;
+}
+
+.wrapper {
+  display: inline-block;
+  width: 800px;
+}
+
 .header {
   background-color: aquamarine;
   padding: 20px;
@@ -6,3 +29,5 @@
 .name {}
 .position {}
 .summary {}
+
+.main {}
